--- a/main.html
+++ b/main.html
@@ -5,6 +5,9 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<body>
+		<div></div>
+	</body>
 
 <body>
 	<!-- the entire body must be written by student -->
