--- a/main.html
+++ b/main.html
@@ -6,7 +6,15 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 	<body>
-		<div></div>
+		  <div class="hero">
+    <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb" alt="Pinterest Hero Image" class="hero-image" />
+    
+    <div class="hero-text">
+      <h1>Welcome to my Pinterest clone</h1>
+      <p>Discover new inspiration and save your favorite ideas</p>
+      <a href="#" class="explore-button">Explore now</a>
+    </div>
+  </div>
 	</body>
 
 <body>
